k8s-security-framework/policies/image-security/KSP-IMG-003/tests/exception-resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ksp-img-003-exception
  namespace: policy-test
spec:
  containers:
    - name: demo-api
      image: harbor.example.com/demo-api:1.0.0
