k8s-security-framework/policies/image-security/KSP-IMG-003/tests/exception.yaml
apiVersion: policies.kyverno.io/v1
kind: PolicyException
metadata:
  name: require-image-digest-exception
  namespace: policy-test
spec:
  policyRefs:
  - name: require-image-digest
    kind: ValidatingPolicy
  matchConditions:
  - name: match-exempt-resource
    expression: object.metadata.name == 'ksp-img-003-exception' && object.metadata.namespace
      == 'policy-test'
