k8s-security-framework/policies/image-security/KSP-IMG-003/tests/negative-init-container-noncompliant-image.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ksp-img-003-negative-init-image
  namespace: policy-test
spec:
  containers:
    - name: good
      image: harbor.example.com/demo-api@sha256:aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
  initContainers:
    - name: init
      image: harbor.example.com/demo-api:1.0.0
