k8s-security-framework/policies/image-security/KSP-IMG-003/tests/negative-noncompliant-image-first.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ksp-img-003-negative-image-first
  namespace: policy-test
spec:
  containers:
    - name: bad
      image: harbor.example.com/demo-api:1.0.0
    - name: good
      image: harbor.example.com/demo-api@sha256:aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
